opam-version: "2.0"
version: "v0.17.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/ppx_base"
bug-reports: "https://github.com/janestreet/ppx_base/issues"
dev-repo: "git+https://github.com/janestreet/ppx_base.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/ppx_base/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"         {>= "5.1.0"}
  "ppx_cold"      {>= "v0.17" & < "v0.18"}
  "ppx_compare"   {>= "v0.17" & < "v0.18"}
  "ppx_enumerate" {>= "v0.17" & < "v0.18"}
  "ppx_globalize" {>= "v0.17" & < "v0.18"}
  "ppx_hash"      {>= "v0.17" & < "v0.18"}
  "ppx_sexp_conv" {>= "v0.17" & < "v0.18"}
  "dune"          {>= "3.11.0"}
  "ppxlib"        {>= "0.28.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Base set of ppx rewriters"
description: "
ppx_base is the set of ppx rewriters used for Base.

Note that Base doesn't need ppx to build, it is only used as a
verification tool.
"
