opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/ppx_base"
bug-reports: "https://github.com/janestreet/ppx_base/issues"
dev-repo: "git+https://github.com/janestreet/ppx_base.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/ppx_base/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "ppx_cold"
  "ppx_compare"
  "ppx_enumerate"
  "ppx_globalize"
  "ppx_hash"
  "ppx_sexp_conv"
  "ppx_shorthand"
  "ppx_template"
  "dune"          {>= "3.17.0"}
  "ppxlib"        {= "0.33.0+ox"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Base set of ppx rewriters"
description: "
ppx_base is the set of ppx rewriters used for Base.

Note that Base doesn't need ppx to build, it is only used as a
verification tool.
"
